r4プロジェクトビルド作成

--- a/src/main/resources/templates/r4project/r4Index.html
+++ b/src/main/resources/templates/r4project/r4Index.html
@@ -1,15 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>R4サイト</title>
 </head>
 <body>
 <h1>youtube検索</h1>
-
-
-<iframe width="480" height="270" src="https://www.youtube.com/embed/M2cckDmNLMI"
-        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media;
-        gyroscope; picture-in-picture" allowfullscreen></iframe>
 </body>
 </html>
