--- a/src/main/resources/templates/r4project/r4Index.html
+++ b/src/main/resources/templates/r4project/r4Index.html
@@ -8,17 +8,11 @@
 <div class="title-font">
 <h1 class="mt-4">youtube検索</h1>
 
-<form action="#" th:action="@{/r4project/r4Index}" method="post" class="mt-6">
-    <div class="container">
-    <div class="row">
-        <div class="col-4">
-            <input type="text" class="form-control" name="detail" placeholder="好きな音楽を検索してください">
-        </div>
-        <div class="col-2">
-            <button type="submit" class="btn btn-primary">検索</button>
-        </div>
-    </div>
-    </div>
+<form action="#" th:action="@{/r4project/r4Index}" method="post" class="m-auto" style="width:80%;">
+	<div class="d-flex w-100" style="height: 3rem;">
+		<input type="text" class="form-control" name="detail" placeholder="好きな音楽を検索してください">
+		<button type="submit" class="btn btn-primary w-auto" style="white-space: nowrap;">検索</button>
+	</div>
 </form>
 </div><br><br>
 <table>
