--- a/src/main/resources/templates/morning/divination.html
+++ b/src/main/resources/templates/morning/divination.html
@@ -4,10 +4,10 @@
 <meta charset="UTF-8">
 <title>Morning 占い画面</title>
 </head>
-<link rel="stylesheet" th:href="@{/css/divination.css}"
-	href="../static/css/divination.css">
-<link rel="stylesheet" th:href="@{/css/stay.css}"
-	href="../static/css/stay.css">
+<link rel="stylesheet" th:href="@{/morning/divination.css}"
+	href="../static/morning/divination.css">
+<link rel="stylesheet" th:href="@{/morning/stay.css}"
+	href="../static/morning/stay.css">
 <body>
 
 	<!-- メニューバー -->
@@ -17,7 +17,7 @@
 		<table>
 			<td><nobr><a th:href="@{/Weather}">天気</a></nobr>
 			<nobr><a th:href="@{/Weather_alert}">警報・注意報</a></nobr>
-			<td><nobr><p class="menu-bar-title"><a th:href="@{/main}"><img src="img/Morning.png"/></a></p></nobr>
+			<td><nobr><p class="menu-bar-title"><a th:href="@{/main}"><img src="morning/Morning.png"/></a></p></nobr>
 			<td><nobr><a th:href="@{/Horoscope}">占い</a></nobr>
 			<nobr><a th:href="@{/Traffic}">交通</a></nobr>
 			<nobr><a th:href="@{/Chart}">チャート</a></nobr>
