--- a/src/main/resources/templates/webapi/index.html
+++ b/src/main/resources/templates/webapi/index.html
@@ -7,12 +7,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="stylesheet" href="../static/css/bootstrap-icons.css">
-    <link rel="stylesheet" href="../static/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../static/css/main.css">
+    <link rel="stylesheet" href="../../static/webapi/css/bootstrap-icons.css">
+    <link rel="stylesheet" href="../../static/webapi/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../../static/webapi/css/main.css">
 </head>
 
 <body class="light">
+
     <div class="modal fade" id="filterForm" tabindex="1000" aria-labelledby="filterFormLabel" aria-hidden="true">
         <div class="modal-dialog">
             <form class="modal-content">
@@ -50,8 +51,12 @@
     </div>
 
     <header class="p-4 sticky-top">
+        <div style="position: absolute; z-index: 2000;">
+            <button class="btn" id="change-theme"></button>
+        </div>
+
         <div class="container">
-            <div class="row mb-2 d-grid align-items-center" id="aiueo">
+            <div class="row mb-2 d-grid align-items-center" id="aiueo" style="height: 4rem;">
                 <a class="d-flex fs-3" id="logo" style="grid-area: a;" href="#" th:href="@{/}">
                     <div></div>
                     <div></div>
@@ -83,23 +88,22 @@
                         </svg>
                     </button>
                 </form>
-                <div class="text-end" style="grid-area: c;">
-                    <button class="btn" id="change-theme">
-                    </button>
-                    <nav aria-label="Page navigation">
-                        <ul class="pagination">
-                            <li class="page-item">
-                                <button class="page-link" id="page-item-prev" type="button" aria-hidden="true" aria-label="Previous"></button>
-                            </li>
-                            <li class="page-item">
-                                <input class="page-link" id="page-item-value" type="number" value="1" min="1" max="99" style="width: 3rem;">
-                            </li>
-                            <li class="page-item">
-                                <button class="page-link" id="page-item-next" type="button" aria-hidden="true" aria-label="Next"></button>
-                            </li>
-                        </ul>
-                    </nav>
-                </div>
+                <nav class="text-end" aria-label="Page navigation" style="grid-area: c;">
+                    <ul class="pagination mb-0">
+                        <li class="page-item">
+                            <button class="page-link" id="page-item-prev" type="button" aria-hidden="true"
+                                aria-label="Previous"></button>
+                        </li>
+                        <li class="page-item">
+                            <input class="page-link" id="page-item-value" type="number" value="1" min="1" max="99"
+                                style="width: 3rem;">
+                        </li>
+                        <li class="page-item">
+                            <button class="page-link" id="page-item-next" type="button" aria-hidden="true"
+                                aria-label="Next"></button>
+                        </li>
+                    </ul>
+                </nav>
             </div>
             <div id="search-form-filter-tags" class="row g-2 align-items-center">
             </div>
@@ -117,9 +121,9 @@
     </footer>
 
     <div th:replace="common :: common-script">
-        <script type="text/javascript" src="../static/js/bootstrap.bundle.min.js"></script>
-        <script type="text/javascript" src="../static/js/jquery-3.6.0.min.js"></script>
-        <script type="text/javascript" src="../static/js/main.js"></script>
+        <script type="text/javascript" src="../../static/webapi/js/bootstrap.bundle.min.js"></script>
+        <script type="text/javascript" src="../../static/webapi/js/jquery-3.6.0.min.js"></script>
+        <script type="text/javascript" src="../../static/webapi/js/main.js"></script>
 
     </div>
 
