--- a/src/main/resources/templates/common.html
+++ b/src/main/resources/templates/common.html
@@ -6,16 +6,16 @@
 
 	<head th:fragment="common-head">
 		<meta charset="UTF-8">
-		<title>ASAP.com</title>
+		<title>MBraw</title>
 
 		<!-- モバイル設定 -->
 		<meta id="viewport" name="viewport" content="width=device-width,
 				initial-scale=1, maximum-scale=1,
 				user-scalable=no">
 		<link rel="manifest" th:href="@{/css/manifest.json}" crossorigin="use-credentials">
-		<meta name="application-name" content="ASAP">
+		<meta name="application-name" content="MBraw">
 		<meta name="mobile-web-app-capable" content="yes">
-		<meta name="apple-mobile-web-app-title" content="ASAP">
+		<meta name="apple-mobile-web-app-title" content="MBraw">
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-status-bar-style" content="black">
 
