--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -24,12 +24,43 @@
     --theme-alpha-color: 1;
 }
 
+.light #logo>div:first-child::after {
+    content: "IT";
+}
+
+.light #logo>div:last-child::after {
+    content: "Media";
+}
+
+
+.red {
+    --theme-name: "red";
+    --theme-color: 255, 225, 225;
+    --theme-sub-color: 15, 15, 15;
+    --theme-alpha-color: 2;
+}
+
 .dark {
     --theme-name: "dark";
     --theme-color: 15, 15, 15;
     --theme-sub-color: 240, 240, 240;
     --theme-alpha-color: 2;
 }
+
+.dark #logo>div:first-child::after {
+    content: "Porn";
+}
+
+.dark #logo>div:last-child::after {
+    content: "hub";
+
+    color: black;
+    background-color: rgb(239, 146, 29);
+
+    border-radius: 5px;
+    transition: all .5s ease-in;
+}
+
 
 a:hover {
     color: inherit;
@@ -56,28 +87,6 @@ header {
 #logo>div:first-child,
 #logo>div:last-child {
     padding: 0 0.25rem;
-}
-
-.light #logo>div:first-child::after {
-    content: "IT";
-}
-
-.light #logo>div:last-child::after {
-    content: "Media";
-}
-
-.dark #logo>div:first-child::after {
-    content: "Porn";
-}
-
-.dark #logo>div:last-child::after {
-    content: "hub";
-
-    color: black;
-    background-color: rgb(239, 146, 29);
-
-    border-radius: 5px;
-    transition: all .5s ease-in;
 }
 
 #change-theme::after {
