--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,10 +7,16 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="stylesheet" href="../../static/webapi/css/bootstrap-icons.css">
-    <link rel="stylesheet" href="../../static/webapi/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../../static/webapi/css/main.css">
+    <link rel="stylesheet" href="../static/css/bootstrap-icons.css">
+    <link rel="stylesheet" href="../static/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../static/css/main.css">
 </head>
+
+<select hidden>
+    <option selected data-class-name="light">News</option>
+    <option data-class-name="red">Youtube</option>
+    <option data-class-name="dark">PornHub</option>
+</select>
 
 <body class="light">
 
@@ -121,9 +127,9 @@
     </footer>
 
     <div th:replace="common :: common-script">
-        <script type="text/javascript" src="../../static/webapi/js/bootstrap.bundle.min.js"></script>
-        <script type="text/javascript" src="../../static/webapi/js/jquery-3.6.0.min.js"></script>
-        <script type="text/javascript" src="../../static/webapi/js/main.js"></script>
+        <script type="text/javascript" src="../static/js/bootstrap.bundle.min.js"></script>
+        <script type="text/javascript" src="../static/js/jquery-3.6.0.min.js"></script>
+        <script type="text/javascript" src="../static/js/main.js"></script>
 
     </div>
 
