--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -24,6 +24,11 @@
     --theme-alpha-color: 1;
 }
 
+.light #logo>div:first-child,
+.light #logo>div:last-child {
+    padding: 0 0.25rem;
+}
+
 .light #logo>div:first-child::after {
     content: "IT";
 }
@@ -40,11 +45,39 @@
     --theme-alpha-color: 2;
 }
 
+.red #logo>div:first-child,
+.red #logo>div:last-child {
+    padding: 0 0.25rem;
+}
+
+.red #logo>div:first-child{
+    font:small;
+}
+
+.red #logo>div:first-child::after {
+    content: "▶";
+
+    color: white;
+    background-color: rgb(255, 0, 0);
+
+    padding:0.5rem 2rem;
+    border-radius: 10px;
+}
+
+.red #logo>div:last-child::after {
+    content: "YouTube";
+}
+
 .dark {
     --theme-name: "dark";
     --theme-color: 15, 15, 15;
     --theme-sub-color: 240, 240, 240;
     --theme-alpha-color: 2;
+}
+
+.dark #logo>div:first-child,
+.dark #logo>div:last-child {
+    padding: 0 0.25rem;
 }
 
 .dark #logo>div:first-child::after {
@@ -57,6 +90,8 @@
     color: black;
     background-color: rgb(239, 146, 29);
 
+    padding: 0 0.25rem;
+    
     border-radius: 5px;
     transition: all .5s ease-in;
 }
@@ -81,12 +116,6 @@ header {
     background-color: inherit;
 
     border-bottom: 1px solid rgba(var(--border-color));
-}
-
-
-#logo>div:first-child,
-#logo>div:last-child {
-    padding: 0 0.25rem;
 }
 
 #change-theme::after {
