MainController修正 Weather_alertServiceのコメント加筆

--- a/src/main/resources/templates/morning/main.html
+++ b/src/main/resources/templates/morning/main.html
@@ -95,7 +95,7 @@
 			<td><nobr><p class="d-word1">今日一番</p></nobr>
 			<nobr><p class="d-word2">運のいい人は</p></nobr>
 			<!-- 1位の人物の星座を表示 -->
-			<nobr><p class="lacky-man"><span th:text="*{top}"></span></p></nobr>
+			<nobr><p class="lacky-man"><span th:text="*{sign}"></span></p></nobr>
 			<nobr><p class="d-word3">の方です</p></nobr></td>
 			<!-- 1位の星座img表示 -->
 			<td><img th:src="*{photopath}"></td>
