--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -51,16 +51,18 @@
 }
 
 .red #logo>div:first-child{
-    font:small;
+    font-size:small;
 }
 
 .red #logo>div:first-child::after {
     content: "▶";
 
+    font-size: larger;
+
     color: white;
     background-color: rgb(255, 0, 0);
 
-    padding:0.5rem 2rem;
+    padding:0.25rem 1.25rem;
     border-radius: 10px;
 }
 
@@ -96,6 +98,11 @@
     transition: all .5s ease-in;
 }
 
+
+a {
+    text-decoration: none;
+    color: inherit;
+}
 
 a:hover {
     color: inherit;
@@ -178,7 +185,7 @@ header {
     border-color: rgba(var(--border-color)) !important;
     --search-form-bg-color: transparent;
     box-shadow: var(--box-shadow);
-    transition: all .2s ease-in;
+    transition: color,background-color,border,box-shadow .2s ease-in;
 }
 
 #search-form-filter .filter-tag button {
@@ -216,9 +223,50 @@ header {
     grid-template-rows: repeat(auto-fill, minmax(var(--min-height), 1fr));
 }
 
-a {
-    text-decoration: none;
-    color: inherit;
+.top-screen main, .top-screen footer{
+    display: none;
+}
+
+.top-screen header{
+    display: grid;
+    border-style: none;
+
+    align-content: center;
+    height: 70vh;
+}
+
+.top-screen #logo{
+    width: auto;
+    justify-content: center;
+
+    margin-bottom: 3rem;
+    margin-left: auto;
+    margin-right: auto;
+
+    background-color: transparent;
+}
+
+.top-screen #logo div::after{
+    font-size: xxx-large;
+    font-weight: bolder;
+}
+
+.top-screen #aiueo{
+    display: block !important;
+    justify-content: center;
+    align-content: center;
+}
+
+.top-screen form{
+    max-width: 560px;
+    margin: auto;
+}
+
+.top-screen #page{
+    display: none;
+}
+.top-screen #search-form-filter-tags{
+    display: none;
 }
 
 .btn {
