--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -139,11 +139,13 @@ header {
     /* grid-template: "a b c d" auto / 1fr auto 1fr 1fr !important; */
 
     min-width: var(--min-width);
-    width: auto;
+    max-width: 560px;
+    width: 100%;
     height: auto;
 
     align-items: center;
     justify-items: center;
+    justify-self: center;
 
     border-radius: 10px;
     border-style: solid;
@@ -242,8 +244,6 @@ header {
     margin-bottom: 3rem;
     margin-left: auto;
     margin-right: auto;
-
-    background-color: transparent;
 }
 
 .top-screen #logo div::after{
@@ -257,8 +257,7 @@ header {
     align-content: center;
 }
 
-.top-screen form{
-    max-width: 560px;
+.top-screen #search-form{
     margin: auto;
 }
 
@@ -379,11 +378,22 @@ header {
 @media (max-width: 576px) {
     #aiueo {
         grid-template:
-            "a . c" auto "b b b" auto / 1fr auto 1fr !important;
+            "a . c" auto 
+            "b b b" auto
+            "d d d" auto / 1fr auto 1fr !important;
+    }
+
+    #aiueo #page > ul{
+        justify-content: end;
     }
 }
 
 #aiueo {
     grid-template:
-        "a b c" auto / 1fr 6fr 1fr;
+        "a b c" auto
+        "d d d" auto / 1fr 6fr 1fr;
+}
+
+#logo{
+    background-color: transparent;
 }
