--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -52,7 +52,7 @@
 
     <header class="p-4 sticky-top">
         <div class="container">
-            <div class="row mb-2 d-grid align-items-center" id="aiueo" style="height: 4rem;">
+            <div class="row mb-2 d-grid align-items-center" id="aiueo">
                 <button class="d-flex fs-3 btn" id="logo">
                     <div></div>
                     <div></div>
@@ -105,9 +105,10 @@
                         </li>
                     </ul>
                 </nav>
+                <div id="search-form-filter-tags" class="row g-2 align-items-center" style="grid-area: d;">
+                </div>
             </div>
-            <div id="search-form-filter-tags" class="row g-2 align-items-center">
-            </div>
+
         </div>
     </header>
 
