--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -58,9 +58,9 @@
                     <div></div>
                 </button>
                 <select id="theme-list" hidden>
-                    <option selected data-class-name="light" data-api-name="newsapi" onclick="newsapi();">ITMedia</option>
-                    <option data-class-name="red" data-api-name="youtubeapi" onclick="youtubeapi();">Youtube</option>
-                    <option data-class-name="dark" data-api-name="pornhubapi" onclick="pornhubapi();">PornHub</option>
+                    <option selected data-class-name="light" data-api-name="newsapi">ITMedia</option>
+                    <option data-class-name="red" data-api-name="youtubeapi">Youtube</option>
+                    <option data-class-name="dark" data-api-name="pornhubapi">PornHub</option>
                 </select>
                 <form id="search-form" style="grid-area: b;" th:action="@{/}">
                     <button class="btn btn-search-form m-1" id="search-form-submit" type="submit" disabled="disabled">
