--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -112,7 +112,7 @@
         </div>
     </header>
 
-    <main class="p-4">
+    <main class="p-4" style="height:200vh;">
         <div class="container">
             <div id="contents" class="row d-grid"></div>
         </div>
