--- a/src/main/resources/templates/morning/alert.html
+++ b/src/main/resources/templates/morning/alert.html
@@ -74,8 +74,8 @@
 				<!-- 日付の表示 -->
 				<tr class="day-box">
 					<th>日付</th>
-					<th colspan="5"><span>今日</span></th>
-					<th colspan="5"><span>明日</span></th>
+					<th th:colspan="${colspan1}"><span>今日</span></th>
+					<th th:colspan="${colspan2}"><span>明日</span></th>
 				</tr>
 
 				<!-- 時間帯の表示 -->
@@ -105,14 +105,15 @@
 				<!-- 災害の表示いつまで続くかの表示 -->
 
 				<th:block th:each="name : ${Weather_alert.weather_alertList}">
+
 					<tr class="disaster">
 						<th class="dis"><span th:text="${name.name}"></span></th>
-						<th:block th:each="alert : ${Weather_alert.weather_dateList}">
-							<th:block th:each="alert2 : ${alert.upperAlertList}">
+						<th:block th:each="alert2 : ${name.upperAlertList}">
 
-								<th th:class="${alert2.alertDataClass}"><small hidden
-									th:text="${alert2.alertData}" class="line"></small></th>
-								<!--  
+
+							<th th:class="${alert2.alertDataClass}"><small hidden
+								th:text="${alert2.alertData}" class="line"></small></th>
+							<!--  
 						<th th:class="${alert.alertdata2class}"><small hidden
 							th:text="${alert.alertdata2}" class="line"></small></th>
 						<th th:class="${alert.alertdata3class}"><small hidden
@@ -132,8 +133,9 @@
 						<th th:class="${alert.alertdata10class}"><small hidden
 							th:text="${alert.alertdata10}" class="line"></small></th>
 							-->
+						</th:block>
 					</tr>
-				</th:block>
+
 				</th:block>
 			</tbody>
 		</table>
@@ -164,12 +166,12 @@
 				</tr>
 
 				<!-- 災害の表示いつまで続くかの表示 -->
-				<tr class="disaster">
-					<th:block th:each="name : ${Weather_alert.weather_alert2List}">
-						<th class="dis"><span th:text="${name.name}"></span></th>
-						<th:block th:each="alert : ${Weather_alert.weather_dateList}">
-							<th:block th:each="alert2 : ${alert.lowerAlertList}">
+				<th:block th:each="name : ${Weather_alert.weather_alert2List}">
 
+					<tr class="disaster">
+
+						<th class="dis"><span th:text="${name.name}"></span></th>
+						<th:block th:each="alert2 : ${name.lowerAlertList}">
 
 							<th th:class="${alert2.alertDataClass}"><small hidden
 								th:text="${alert2.alertData}"></small></th>
@@ -182,9 +184,8 @@
 							th:text="${alert.alert4}"></small></th>
 							  -->
 						</th:block>
-						</th:block>
-					</th:block>
-				</tr>
+					</tr>
+				</th:block>
 				</th:block>
 			</tbody>
 		</table>
