--- a/src/main/resources/static/morning/main.css
+++ b/src/main/resources/static/morning/main.css
@@ -88,7 +88,7 @@
 }
 
 /* 警報メッセージのデザイン */
-.white{
+.WHITE{
 	background-color: white;
 	font-size: 25px;
 	width: 120px;
@@ -98,7 +98,7 @@
 	border: 2px solid #000000;
 }
 
-.yellow{
+.YELLOW{
 	background-color: yellow;
 	font-size: 25px;
 	width: 120px;
@@ -108,7 +108,7 @@
 	border: 2px solid #000000;
 }
 
-.red{
+.RED{
 	background-color: red;
 	color: white;
 	font-size: 25px;
@@ -119,7 +119,7 @@
 	border: 2px solid #000000;
 }
 
-.black{
+.BLACK{
 	background-color: black;
 	color: white;
 	font-size: 25px;
