見た目完成

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -53,7 +53,7 @@
     <header class="p-4 sticky-top">
         <div class="container">
             <div class="row mb-2 d-grid align-items-center" id="aiueo">
-                <button class="d-flex fs-3 btn" id="logo">
+                <button id="logo" class="d-flex fs-3 btn">
                     <div></div>
                     <div></div>
                 </button>
