--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -1,4 +1,135 @@
 * {
+    --bd-purple: #4c0bce;
+    --bd-violet: #712cf9;
+    --bd-accent: #ffe484;
+    --bd-violet-rgb: 112.520718,44.062154,249.437846;
+    --bd-accent-rgb: 255,228,132;
+    --bd-pink-rgb: 214,51,132;
+    --bd-teal-rgb: 32,201,151;
+    --docsearch-primary-color: var(--bd-violet);
+    --docsearch-logo-color: var(--bd-violet);
+    --bd-violet-bg: var(--bd-violet);
+    --bd-sidebar-link-bg: rgba(var(--bd-violet-rgb), .1);
+    --bd-pink-rgb: 214,51,132;
+    --bs-blue: #0d6efd;
+    --bs-indigo: #6610f2;
+    --bs-purple: #6f42c1;
+    --bs-pink: #d63384;
+    --bs-red: #dc3545;
+    --bs-orange: #fd7e14;
+    --bs-yellow: #ffc107;
+    --bs-green: #198754;
+    --bs-teal: #20c997;
+    --bs-cyan: #0dcaf0;
+    --bs-black: #000;
+    --bs-white: #fff;
+    --bs-gray: #6c757d;
+    --bs-gray-dark: #343a40;
+    --bs-gray-100: #f8f9fa;
+    --bs-gray-200: #e9ecef;
+    --bs-gray-300: #dee2e6;
+    --bs-gray-400: #ced4da;
+    --bs-gray-500: #adb5bd;
+    --bs-gray-600: #6c757d;
+    --bs-gray-700: #495057;
+    --bs-gray-800: #343a40;
+    --bs-gray-900: #212529;
+    --bs-primary: #0d6efd;
+    --bs-secondary: #6c757d;
+    --bs-success: #198754;
+    --bs-info: #0dcaf0;
+    --bs-warning: #ffc107;
+    --bs-danger: #dc3545;
+    --bs-light: #f8f9fa;
+    --bs-dark: #212529;
+    --bs-primary-rgb: 13,110,253;
+    --bs-secondary-rgb: 108,117,125;
+    --bs-success-rgb: 25,135,84;
+    --bs-info-rgb: 13,202,240;
+    --bs-warning-rgb: 255,193,7;
+    --bs-danger-rgb: 220,53,69;
+    --bs-light-rgb: 248,249,250;
+    --bs-dark-rgb: 33,37,41;
+    --bs-primary-text: #0a58ca;
+    --bs-secondary-text: #6c757d;
+    --bs-success-text: #146c43;
+    --bs-info-text: #087990;
+    --bs-warning-text: #997404;
+    --bs-danger-text: #b02a37;
+    --bs-light-text: #6c757d;
+    --bs-dark-text: #495057;
+    --bs-primary-bg-subtle: #cfe2ff;
+    --bs-secondary-bg-subtle: #f8f9fa;
+    --bs-success-bg-subtle: #d1e7dd;
+    --bs-info-bg-subtle: #cff4fc;
+    --bs-warning-bg-subtle: #fff3cd;
+    --bs-danger-bg-subtle: #f8d7da;
+    --bs-light-bg-subtle: #fcfcfd;
+    --bs-dark-bg-subtle: #ced4da;
+    --bs-primary-border-subtle: #9ec5fe;
+    --bs-secondary-border-subtle: #e9ecef;
+    --bs-success-border-subtle: #a3cfbb;
+    --bs-info-border-subtle: #9eeaf9;
+    --bs-warning-border-subtle: #ffe69c;
+    --bs-danger-border-subtle: #f1aeb5;
+    --bs-light-border-subtle: #e9ecef;
+    --bs-dark-border-subtle: #adb5bd;
+    --bs-white-rgb: 255,255,255;
+    --bs-black-rgb: 0,0,0;
+    --bs-body-color-rgb: 33,37,41;
+    --bs-body-bg-rgb: 255,255,255;
+    --bs-font-sans-serif: system-ui,-apple-system,"Segoe UI",Roboto,"Helvetica Neue","Noto Sans","Liberation Sans",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
+    --bs-font-monospace: SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace;
+    --bs-gradient: linear-gradient(180deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0));
+    --bs-body-font-family: var(--bs-font-sans-serif);
+    --bs-body-font-size: 1rem;
+    --bs-body-font-weight: 400;
+    --bs-body-line-height: 1.5;
+    --bs-body-color: #212529;
+    --bs-emphasis-color: #000;
+    --bs-emphasis-color-rgb: 0,0,0;
+    --bs-secondary-color: rgba(33, 37, 41, 0.75);
+    --bs-secondary-color-rgb: 33,37,41;
+    --bs-secondary-bg: #e9ecef;
+    --bs-secondary-bg-rgb: 233,236,239;
+    --bs-tertiary-color: rgba(33, 37, 41, 0.5);
+    --bs-tertiary-color-rgb: 33,37,41;
+    --bs-tertiary-bg: #f8f9fa;
+    --bs-tertiary-bg-rgb: 248,249,250;
+    --bs-body-bg: #fff;
+    --bs-body-bg-rgb: 255,255,255;
+    --bs-link-color: #0d6efd;
+    --bs-link-color-rgb: 13,110,253;
+    --bs-link-decoration: underline;
+    --bs-link-hover-color: #0a58ca;
+    --bs-link-hover-color-rgb: 10,88,202;
+    --bs-code-color: #d63384;
+    --bs-highlight-bg: #fff3cd;
+    --bs-border-width: 1px;
+    --bs-border-style: solid;
+    --bs-border-color: #dee2e6;
+    --bs-border-color-translucent: rgba(0, 0, 0, 0.175);
+    --bs-border-radius: 0.375rem;
+    --bs-border-radius-sm: 0.25rem;
+    --bs-border-radius-lg: 0.5rem;
+    --bs-border-radius-xl: 1rem;
+    --bs-border-radius-2xl: 2rem;
+    --bs-border-radius-pill: 50rem;
+    --bs-box-shadow: 0 0.5rem 1rem rgba(var(--bs-body-color-rgb), 0.15);
+    --bs-box-shadow-sm: 0 0.125rem 0.25rem rgba(var(--bs-body-color-rgb), 0.075);
+    --bs-box-shadow-lg: 0 1rem 3rem rgba(var(--bs-body-color-rgb), 0.175);
+    --bs-box-shadow-inset: inset 0 1px 2px rgba(var(--bs-body-color-rgb), 0.075);
+    --bs-emphasis-color: #000;
+    --bs-form-control-bg: var(--bs-body-bg);
+    --bs-form-control-disabled-bg: var(--bs-secondary-bg);
+    --bs-highlight-bg: #fff3cd;
+    --bs-breakpoint-xs: 0;
+    --bs-breakpoint-sm: 576px;
+    --bs-breakpoint-md: 768px;
+    --bs-breakpoint-lg: 992px;
+    --bs-breakpoint-xl: 1200px;
+    --bs-breakpoint-xxl: 1400px;
+
     --min-width: 15rem;
     --min-height: 15rem;
 
@@ -19,28 +150,28 @@
 
 .light {
     --theme-name: "light";
-    --theme-color: 240, 240, 240;
+    --theme-color: 125, 255, 255;
     --theme-sub-color: 15, 15, 15;
     --theme-alpha-color: 1;
 }
 
 .light #logo>div:first-child,
 .light #logo>div:last-child {
-    padding: 0 0.25rem;
+    padding: 0 0.5rem;
 }
 
 .light #logo>div:first-child::after {
-    content: "IT";
+    content: url("../ITMedia.svg");
 }
 
 .light #logo>div:last-child::after {
-    content: "Media";
+    content: "IT Media";
 }
 
 
 .red {
     --theme-name: "red";
-    --theme-color: 255, 225, 225;
+    --theme-color: 255, 125, 125;
     --theme-sub-color: 15, 15, 15;
     --theme-alpha-color: 2;
 }
@@ -112,22 +243,51 @@ svg {
     fill: rgba(var(--svg-color));
 }
 
+html{
+    
+}
+
 body {
+    width: 100vw;
+    height: 100vh;
+    overflow: hidden;
+
     color: rgb(var(--theme-sub-color));
     background-color: rgb(var(--theme-color));
     transition: color .5s, background-color 1s ease-in;
+    
+    background-image: linear-gradient(
+        180deg, 
+        rgba(var(--bs-body-bg-rgb), 0.01), 
+        rgba(var(--bs-body-bg-rgb), 1) 85%),
+        radial-gradient(
+            ellipse at top left, 
+            rgba(var(--bs-primary-rgb), 0.5), 
+            transparent 50%),
+            radial-gradient(
+                ellipse at top right, 
+                rgba(var(--bd-accent-rgb), 0.5), 
+                transparent 50%),
+                radial-gradient(
+                    ellipse at center right, 
+                    rgba(var(--bd-violet-rgb), 0.5), 
+                    transparent 50%),
+                    radial-gradient(
+                        ellipse at center left, 
+                        rgba(var(--bd-pink-rgb), 0.5), 
+                        transparent 50%);
 }
 
 header {
     color: inherit;
-    background-color: inherit;
-
+    background-color: transparent;
+    
     border-bottom: 1px solid rgba(var(--border-color));
     transition: 1s;
 }
 
-#change-theme::after {
-    content: var(--theme-name);
+main{
+    overflow: auto;
 }
 
 #filterForm .form-select {
@@ -235,7 +395,11 @@ header {
     border-style: none;
 
     align-content: center;
-    height: 70vh;
+    height: 100vh;
+}
+
+.top-screen .container{
+    margin-bottom: 10rem;
 }
 
 .top-screen #logo{
@@ -376,7 +540,7 @@ header {
     content: "Next";
 }
 
-@media (max-width: 576px) {
+@media (max-width: 768px) {
     #aiueo {
         grid-template:
             "a . c" auto 
@@ -397,16 +561,18 @@ header {
 
 #logo{
     background-color: transparent;
+
+    font-weight: bolder;
 }
 
 .scrolling{
-    display: none;;
 }
+
 .scrolling #aiueo{
     grid-template:
         "a . c" auto 
-        "b b b" auto
-        "d d d" auto / 1fr auto 1fr !important;
+        "b b b" none
+        "d d d" none / 1fr auto 1fr !important;
 }
 
 .scrolling #search-form{
