メイン画面修正

--- a/src/main/resources/templates/morning/main.html
+++ b/src/main/resources/templates/morning/main.html
@@ -47,6 +47,13 @@
 	style="line-height: 2.0;">
 	＜＜けんおんちゃんはこちら</a>
 	</nobr>
+	
+	
+	<nobr>
+	<a href="tel:011-831-5511"
+	style="line-height: 2.0;">
+	＜＜北海道情報専門学校:011-831-5511</a>
+	</nobr>
 	</p>
 	
 	<div class="contents">
