--- a/src/main/resources/templates/morning/traffic_result.html
+++ b/src/main/resources/templates/morning/traffic_result.html
@@ -79,6 +79,8 @@
 	</th:block>
 
 	<br>
+	
 	<a href="" onclick="window.history.back(); return false;">＜＜前のページに戻る</a>
+	<div class="bottom-space"></div>
 </body>
 </html>
