タイトル修正

--- a/src/main/resources/templates/morning/traffic_result.html
+++ b/src/main/resources/templates/morning/traffic_result.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
-<title>バス交通情報詳細</title>
+<title>MORNINGzバス交通情報詳細</title>
 </head>
 <link rel="stylesheet" th:href="@{/morning/traffic_result.css}"
 	href="../static/morning/traffic.css">
